add copy directive for annotation logs

--- a/conf/fluent.conf
+++ b/conf/fluent.conf
@@ -4,19 +4,58 @@
 
 # Only process monitoring_events of content_type 'Annotations'
 <match docker.annotations.**>
-  @type kinesis_streams
-  stream_name "#{ENV['KINESIS_STREAM']}"
-  aws_key_id "#{ENV['S3_ACCESS_KEY']}"
-  aws_sec_key "#{ENV['S3_SECRET_ACCESS_KEY']}"
-  # Recommended throughput settings
-  <buffer>
-    flush_mode interval
-    flush_interval 2s
-  </buffer>
-  <instance_profile_credentials>
-    ip_address 169.254.169.254
-    port       80b
-  </instance_profile_credentials>
+  
+  #In order to redirect annotation logs to S3 and Kinesis we need to copy them
+
+  @type copy
+  <store>
+    @type kinesis_streams
+    stream_name "#{ENV['KINESIS_STREAM']}"
+    aws_key_id "#{ENV['S3_ACCESS_KEY']}"
+    aws_sec_key "#{ENV['S3_SECRET_ACCESS_KEY']}"
+    # Recommended throughput settings
+    <buffer>
+      flush_mode interval
+      flush_interval 2s
+    </buffer>
+    <instance_profile_credentials>
+      ip_address 169.254.169.254
+      port       80b
+    </instance_profile_credentials>
+  </store>
+  
+  <store>
+    @type s3
+    @log_level info
+    aws_key_id "#{ENV['S3_ACCESS_KEY']}"
+    aws_sec_key "#{ENV['S3_SECRET_ACCESS_KEY']}"
+    s3_bucket "#{ENV['BUCKET_NAME']}"
+    s3_region "#{ENV['AWS_REGION']}"
+    s3_object_key_format %{path}/fluentd-%{index}
+    path "#{ENV['ENVIRONMENT_NAME']}"
+    store_as text
+
+    <buffer>
+     @type file
+     path /var/log/fluentd-buffers/s3-annotations.buffer
+     timekey 3600 # 1 hour partition
+     timekey_wait 5m
+     timekey_use_utc true # use utc
+     flush_mode interval
+     flush_interval 2s
+     chunk_limit_size 256m 
+     flush_thread_counts 8
+    </buffer>
+
+    <format>
+      @type json
+    </format>
+
+    <instance_profile_credentials>
+     ip_address 169.254.169.254
+     port       80b
+    </instance_profile_credentials>
+  </store>
 </match>
 
 #Match all remaining logs, and output them to the fluentd /dev/null equivalent for now
