add deep copy feature

--- a/conf/fluent.conf
+++ b/conf/fluent.conf
@@ -8,6 +8,7 @@
   #In order to redirect annotation logs to S3 and Kinesis we need to copy them
 
   @type copy
+  deep_copy true
   <store>
     @type kinesis_streams
     stream_name "#{ENV['KINESIS_STREAM']}"
