--- a/conf/fluent.conf
+++ b/conf/fluent.conf
@@ -26,6 +26,52 @@
   </store>
   
   <store>
+    @type relabel
+    @label @annotations
+  </store>
+</match>
+
+#### Annotations Filters###################################################
+<label @annotations>
+  <filter docker.annotations.**>
+     @type parser
+    key_name MESSAGE
+
+     reserve_data true
+    emit_invalid_record_to_error false
+    
+    <parse>
+      # Parse the MESSAGE field as json, and merge the new fields into the log message
+      @type json
+    </parse>
+  </filter>
+
+  <filter docker.annotations.**>
+     @type       record_transformer
+    enable_ruby true
+    remove_keys ["CONTAINER_TAG","SYSLOG_IDENTIFIER"]
+  </filter>
+
+  <filter docker.annotations.**>
+   @type       record_transformer
+   enable_ruby true
+   <record>
+      event            ${record}
+      time             ${record["_SOURCE_REALTIME_TIMESTAMP"]}
+   </record>
+  </filter>
+
+  <filter docker.annotations.**>
+   @type       record_transformer
+   enable_ruby true
+   renew_record true
+   keep_keys event, time
+  </filter>
+
+  #### End Annotations Filter ###################################
+
+  <match docker.annotations.**>
+
     @type s3
     @log_level info
     aws_key_id "#{ENV['S3_ACCESS_KEY']}"
@@ -56,8 +102,9 @@
      ip_address 169.254.169.254
      port       80b
     </instance_profile_credentials>
-  </store>
-</match>
+  
+  </match>
+</label>
 
 #Match all remaining logs, and output them to the fluentd /dev/null equivalent for now
 <match docker.**>
