Update S3 bucket and fluentd labels

--- a/conf/fluent.conf
+++ b/conf/fluent.conf
@@ -79,7 +79,7 @@
     s3_bucket "#{ENV['BUCKET_NAME']}"
     s3_region "#{ENV['AWS_REGION']}"
     s3_object_key_format %{path}/fluentd-%{index}
-    path S3-copy #"#{ENV['ENVIRONMENT_NAME']}"
+    path "#{ENV['ENVIRONMENT_NAME']}"
     store_as text
 
     <buffer>
