Reconfigure S3 buffer settings

--- a/conf/fluent.conf
+++ b/conf/fluent.conf
@@ -115,7 +115,7 @@
    aws_sec_key "#{ENV['S3_SECRET_ACCESS_KEY']}"
    s3_bucket "#{ENV['BUCKET_NAME']}"
    s3_region "#{ENV['AWS_REGION']}"
-   s3_object_key_format %{path}/fluentd-%{index}
+   s3_object_key_format %{path}/fluentd-_%{time_slice}%{hex_random}_%{hostname}
    path "#{ENV['ENVIRONMENT_NAME']}"
    store_as text
 
@@ -126,7 +126,7 @@
      timekey_wait 5m
      timekey_use_utc true # use utc
      flush_mode interval
-     flush_interval 2s
+     flush_interval 30s
      chunk_limit_size 256m 
      flush_thread_counts 8
    </buffer>
