update buffer plugin

--- a/conf/fluent.conf
+++ b/conf/fluent.conf
@@ -120,7 +120,7 @@
    store_as text
 
    <buffer>
-     @type file
+     @type file_single
      path /var/log/fluentd-buffers/s3.buffer
      timekey 3600 # 1 hour partition
      timekey_wait 5m
