Update fluent-plugin-rewrite-tag-filter plugin

--- a/conf/docker.conf
+++ b/conf/docker.conf
@@ -27,7 +27,7 @@
 
 <match docker.source>
    @type rewrite_tag_filter
-
+   emit_mode batch
    # Filter out events with synthetic requests, healthchecks or excessive volume mount logs.
    <rule>
       key MESSAGE
