--- a/conf/fluent.conf
+++ b/conf/fluent.conf
@@ -91,7 +91,7 @@
      flush_mode interval
      flush_interval 2s
      chunk_limit_size 256m 
-     flush_thread_counts 8
+     flush_thread_count 8
     </buffer>
 
     <format>
@@ -128,7 +128,7 @@
      flush_mode interval
      flush_interval 30s
      chunk_limit_size 256m 
-     flush_thread_counts 8
+     flush_thread_count 8
    </buffer>
 
    <format>
