Update fluentd rules

--- a/conf/docker.conf
+++ b/conf/docker.conf
@@ -56,16 +56,16 @@
    </rule>
 
    # Re-route logs to tags that include their service name (for per-service processing)
-   <rule>
-     key     SERVICE_NAME
-     pattern (.+)
-     tag     docker.service_name.$1
-   </rule>
+   #<rule>
+   #  key     SERVICE_NAME
+   #  pattern (.+)
+   #  tag     docker.service_name.$1
+   #</rule>
 
 </match>
 
 #Attempt to parse the MESSAGE field as JSON
-<filter docker.service_name.*>
+<filter docker.source.*>
    @type parser
    key_name MESSAGE
 
@@ -79,7 +79,7 @@
 </filter>
 
 #Parse Varnish logs
-<filter docker.service_name.*>
+<filter docker.source.*>
    @type parser
    key_name MESSAGE
 
@@ -91,13 +91,13 @@
    </parse>
 </filter>
 
-<filter docker.service_name.*>
+<filter docker.source.*>
    @type       record_transformer
    enable_ruby true
    remove_keys ["CONTAINER_TAG","SYSLOG_IDENTIFIER"]
 </filter>
 
-<filter docker.service_name.*>
+<filter docker.source.*>
    @type       record_transformer
    enable_ruby true
    <record>
@@ -106,7 +106,7 @@
    </record>
 </filter>
 
-<filter docker.service_name.*>
+<filter docker.source.*>
    @type       record_transformer
    enable_ruby true
    renew_record true
