update matching patern

--- a/conf/docker.conf
+++ b/conf/docker.conf
@@ -65,7 +65,7 @@
 </match>
 
 #Attempt to parse the MESSAGE field as JSON
-<filter docker.source.*>
+<filter docker.source>
    @type parser
    key_name MESSAGE
 
@@ -79,7 +79,7 @@
 </filter>
 
 #Parse Varnish logs
-<filter docker.source.*>
+<filter docker.source>
    @type parser
    key_name MESSAGE
 
@@ -91,13 +91,13 @@
    </parse>
 </filter>
 
-<filter docker.source.*>
+<filter docker.source>
    @type       record_transformer
    enable_ruby true
    remove_keys ["CONTAINER_TAG","SYSLOG_IDENTIFIER"]
 </filter>
 
-<filter docker.source.*>
+<filter docker.source>
    @type       record_transformer
    enable_ruby true
    <record>
@@ -106,7 +106,7 @@
    </record>
 </filter>
 
-<filter docker.source.*>
+<filter docker.source>
    @type       record_transformer
    enable_ruby true
    renew_record true
