Update docker syntax

--- a/conf/fluent.conf
+++ b/conf/fluent.conf
@@ -107,7 +107,7 @@
 </label>
 
 #Match all remaining logs, and output them to the fluentd /dev/null equivalent for now
-<match docker.**>
+<match docker.source>
   #@type null
   @type s3
   @log_level info
