--- a/conf/fluent.conf
+++ b/conf/fluent.conf
@@ -141,6 +141,6 @@
    </instance_profile_credentials>
 </match>
 
-<match blacklisted.*>
-  @type null
-</match>
+#<match blacklisted.*>
+#  @type null
+#</match>
