disable S3 json format

--- a/conf/fluent.conf
+++ b/conf/fluent.conf
@@ -131,9 +131,9 @@
      flush_thread_count 8
    </buffer>
 
-   <format>
-    @type json
-   </format>
+   #<format>
+   # @type json
+   #</format>
 
    <instance_profile_credentials>
      ip_address 169.254.169.254
