Setup memory buffer

--- a/conf/fluent.conf
+++ b/conf/fluent.conf
@@ -120,20 +120,20 @@
    store_as text
 
    <buffer>
-     @type file_single
-     path /var/log/fluentd-buffers/s3.buffer
-     timekey 3600 # 1 hour partition
-     timekey_wait 5m
-     timekey_use_utc true # use utc
+     @type memory
+     #path /var/log/fluentd-buffers/s3.buffer
+     #timekey 3600 # 1 hour partition
+     #timekey_wait 5m
+     #timekey_use_utc true # use utc
      flush_mode interval
-     flush_interval 30s
+     flush_interval 2s
      chunk_limit_size 256m 
      flush_thread_count 8
    </buffer>
 
-   #<format>
-   # @type json
-   #</format>
+   <format>
+    @type json
+   </format>
 
    <instance_profile_credentials>
      ip_address 169.254.169.254
