Update buffer plugin

--- a/conf/fluent.conf
+++ b/conf/fluent.conf
@@ -83,14 +83,14 @@
     store_as text
 
     <buffer>
-     @type file
-     path /var/log/fluentd-buffers/s3-annotations.buffer
-     timekey 3600 # 1 hour partition
-     timekey_wait 5m
-     timekey_use_utc true # use utc
+     @type memory
+     #path /var/log/fluentd-buffers/s3-annotations.buffer
+     #timekey 3600 # 1 hour partition
+     #timekey_wait 5m
+     #timekey_use_utc true # use utc
      flush_mode interval
      flush_interval 2s
-     chunk_limit_size 256m 
+     chunk_limit_size 16m 
      flush_thread_count 8
     </buffer>
 
@@ -127,7 +127,7 @@
      #timekey_use_utc true # use utc
      flush_mode interval
      flush_interval 2s
-     chunk_limit_size 256m 
+     chunk_limit_size 16m 
      flush_thread_count 8
    </buffer>
 
