--- a/conf/docker.conf
+++ b/conf/docker.conf
@@ -99,14 +99,14 @@
 </filter>
 
 #Check if this can be removed/overcomed
-<filter docker.source>
-   @type       record_transformer
-   enable_ruby true
-   <record>
-      event            ${record}
-      time             ${record["_SOURCE_REALTIME_TIMESTAMP"]}
-   </record>
-</filter>
+#<filter docker.source>
+#   @type       record_transformer
+#   enable_ruby true
+#   <record>
+#      event            ${record}
+#      time             ${record["_SOURCE_REALTIME_TIMESTAMP"]}
+#   </record>
+#</filter>
 
 <filter docker.source>
    @type       record_transformer
