Testing without rewriting to event and time json

--- a/conf/docker.conf
+++ b/conf/docker.conf
@@ -25,48 +25,48 @@
    </record>
 </filter>
 
-#<match docker.source>
-#   @type rewrite_tag_filter
-#   emit_mode batch
+<match docker.source>
+   @type rewrite_tag_filter
+   emit_mode batch
    # Filter out events with synthetic requests, healthchecks or excessive volume mount logs.
-#   <rule>
-#      key MESSAGE
-#      pattern \/__health|\"transaction_id\":\"SYNTHETIC-REQ|\/__gtg|transaction_id=SYNTHETIC-REQ|MountVolume.SetUp succeeded for volume
-#      tag blacklisted.message
-#   </rule>
+   <rule>
+      key MESSAGE
+      pattern \/__health|\"transaction_id\":\"SYNTHETIC-REQ|\/__gtg|transaction_id=SYNTHETIC-REQ|MountVolume.SetUp succeeded for volume
+      tag blacklisted.message
+   </rule>
 
-#   # Filter out blacklisted container tags
-#   <rule>
-#      key CONTAINER_TAG
-#      pattern gcr.io\/google_containers\/heapster|gcr.io\/google_containers\/kubedns-amd64|gcr.io\/google_containers\/addon-resizer|coco\/resilient-splunk-forwarder
-#      tag blacklisted.tags
-#   </rule>
-#
-#   # Filter out docker daemon logs
-#   <rule>
-#      key SYSLOG_IDENTIFIER
-#      pattern dockerd
-#      tag blacklisted.syslogids
-#   </rule>
-#
-#   <rule>
-#      key MESSAGE
-#      pattern /\"monitoring_event\":\"true/
-#      tag docker.annotations
-#   </rule>
+   # Filter out blacklisted container tags
+   <rule>
+      key CONTAINER_TAG
+      pattern gcr.io\/google_containers\/heapster|gcr.io\/google_containers\/kubedns-amd64|gcr.io\/google_containers\/addon-resizer|coco\/resilient-splunk-forwarder
+      tag blacklisted.tags
+   </rule>
+
+   # Filter out docker daemon logs
+   <rule>
+      key SYSLOG_IDENTIFIER
+      pattern dockerd
+      tag blacklisted.syslogids
+   </rule>
+
+   <rule>
+      key MESSAGE
+      pattern /\"monitoring_event\":\"true/
+      tag docker.annotations
+   </rule>
 
    # Re-route logs to tags that include their service name (for per-service processing)
-   #<rule>
-   #  key     SERVICE_NAME
-   #  pattern (.+)
-   #  tag     docker.service_name.$1
+   <rule>
+     key     SERVICE_NAME
+     pattern (.+)
+     tag     docker.service_name.$1
 
-   #</rule>
+   </rule>
 
-#</match>
+</match>
 
 #Attempt to parse the MESSAGE field as JSON
-<filter docker.source>
+<filter docker.service_name.*>
    @type parser
    key_name MESSAGE
 
@@ -80,26 +80,26 @@
 </filter>
 
 #Parse Varnish logs
-#<filter docker.source>
-#   @type parser
-#   key_name MESSAGE
-#
-#   reserve_data true
-#   emit_invalid_record_to_error false
-#   <parse>
-#         @type regexp
-#         expression /^[\d\.\,\s]+\s+(?<authuser>\S+)\s+[\w:\/]+\s+(?<uri>\S+)\s+(?<status>[0-9]{3}|[-]{1})\s+(?<resptime>[0-9\.]+)\s+\"(?<useragent>[\S\s]+)\"\stransaction_id=(?<transaction_id>[\S]+)+\s+(?<other>\w+)/
-#   </parse>
-#</filter>
+<filter docker.service_name.*>
+   @type parser
+   key_name MESSAGE
 
-<filter docker.source>
+   reserve_data true
+   emit_invalid_record_to_error false
+   <parse>
+         @type regexp
+         expression /^[\d\.\,\s]+\s+(?<authuser>\S+)\s+[\w:\/]+\s+(?<uri>\S+)\s+(?<status>[0-9]{3}|[-]{1})\s+(?<resptime>[0-9\.]+)\s+\"(?<useragent>[\S\s]+)\"\stransaction_id=(?<transaction_id>[\S]+)+\s+(?<other>\w+)/
+   </parse>
+</filter>
+
+<filter docker.service_name.*>
    @type       record_transformer
    enable_ruby true
    remove_keys ["CONTAINER_TAG","SYSLOG_IDENTIFIER"]
 </filter>
 
-#Check if this can be removed/overcomed
-#<filter docker.source>
+
+#<filter docker.service_name.*>
 #   @type       record_transformer
 #   enable_ruby true
 #   <record>
@@ -108,9 +108,9 @@
 #   </record>
 #</filter>
 
-<filter docker.source>
-   @type       record_transformer
-   enable_ruby true
-   renew_record true
-   keep_keys event, time
-</filter>
+#<filter docker.service_name.*>
+#   @type       record_transformer
+#   enable_ruby true
+#   renew_record true
+#   keep_keys event, time
+#</filter>
