--- a/conf/fluent.conf
+++ b/conf/fluent.conf
@@ -83,11 +83,11 @@
     store_as text
 
     <buffer>
-     @type memory
-     #path /var/log/fluentd-buffers/s3-annotations.buffer
-     #timekey 3600 # 1 hour partition
-     #timekey_wait 5m
-     #timekey_use_utc true # use utc
+     @type file
+     path /var/log/fluentd-buffers/s3-annotations.buffer
+     timekey 3600 # 1 hour partition
+     timekey_wait 5m
+     timekey_use_utc true # use utc
      flush_mode interval
      flush_interval 2s
      chunk_limit_size 16m 
@@ -107,7 +107,7 @@
 </label>
 
 #Match all remaining logs, and output them to the fluentd /dev/null equivalent for now
-<match docker.source>
+<match docker.**>
   #@type null
   @type s3
   @log_level info
@@ -120,11 +120,11 @@
    store_as text
 
    <buffer>
-     @type memory
-     #path /var/log/fluentd-buffers/s3.buffer
-     #timekey 3600 # 1 hour partition
-     #timekey_wait 5m
-     #timekey_use_utc true # use utc
+     @type file
+     path /var/log/fluentd-buffers/s3.buffer
+     timekey 3600 # 1 hour partition
+     timekey_wait 5m
+     timekey_use_utc true # use utc
      flush_mode interval
      flush_interval 2s
      chunk_limit_size 16m 
@@ -133,12 +133,15 @@
 
    <format>
     @type json
+    include_time_key true
+    time_key time
    </format>
 
    <instance_profile_credentials>
      ip_address 169.254.169.254
      port       80b
    </instance_profile_credentials>
+
 </match>
 
 #<match blacklisted.*>
