Disable record transfor filters

--- a/conf/docker.conf
+++ b/conf/docker.conf
@@ -5,11 +5,11 @@
    remove_keys ["_SYSTEMD_UNIT","_HOSTNAME","CONTAINER_NAME","_GID","_CAP_EFFECTIVE","SYSLOG_FACILITY","PRIORITY","_BOOT_ID","_CMDLINE","_COMM","_EXE","_SYSTEMD_CGROUP","_SYSTEMD_SLICE","_TRANSPORT","_UID","__CURSOR","__MONOTONIC_TIMESTAMP","_SELINUX_CONTEXT","__REALTIME_TIMESTAMP","_PID","CONTAINER_ID","CONTAINER_ID_FULL","_MACHINE_ID","_SYSTEMD_INVOCATION_ID"]
    <record>
       SERVICE_NAME      ${ record["CONTAINER_NAME"] != nil && record["CONTAINER_NAME"].split("_").length >= 2 ? record["CONTAINER_NAME"].split("_")[1].split(".")[0] : "" }
-      transaction_id    ${ /\btransaction_id=(?<transaction_id>[A-Za-z0-9\-_:]+)/ =~ record["MESSAGE"] && transaction_id != nil ? transaction_id : "" }
+      #transaction_id    ${ /\btransaction_id=(?<transaction_id>[A-Za-z0-9\-_:]+)/ =~ record["MESSAGE"] && transaction_id != nil ? transaction_id : "" }
       platform          upp-k8s
       SYSTEMD_UNIT      ${record["_SYSTEMD_UNIT"]}
       HOSTNAME          ${record["_HOSTNAME"]}
-      MESSAGE           ${ record["MESSAGE"] != nil ? record["MESSAGE"].gsub(/(?i)api_?key(?-i)=[^\s&]+/, 'apiKey=********') : record["MESSAGE"] } # obfuscate API Keys (if there are any)
+      #MESSAGE           ${ record["MESSAGE"] != nil ? record["MESSAGE"].gsub(/(?i)api_?key(?-i)=[^\s&]+/, 'apiKey=********') : record["MESSAGE"] } # obfuscate API Keys (if there are any)
       environment       "#{ENV['ENVIRONMENT_NAME']}"
       POD_NAME          ${ record["CONTAINER_NAME"] != nil && record["CONTAINER_NAME"].split("_").length >= 2 ? record["CONTAINER_NAME"].split("_")[2].split(".")[0] : "" }
    </record>
@@ -17,13 +17,13 @@
 
 # Kinesis analytics streams don't appear to support json fields with '@' - we will continue to send @time however
 
-<filter docker.source>
-   @type       record_transformer
-   enable_ruby true
-   <record>
-      event_time ${ record["@time"] != nil ? record["@time"] : "" }
-   </record>
-</filter>
+#<filter docker.source>
+#   @type       record_transformer
+#   enable_ruby true
+#   <record>
+#      event_time ${ record["@time"] != nil ? record["@time"] : "" }
+#   </record>
+#</filter>
 
 #<match docker.source>
 #   @type rewrite_tag_filter
@@ -92,11 +92,11 @@
 #   </parse>
 #</filter>
 
-<filter docker.source>
-   @type       record_transformer
-   enable_ruby true
-   remove_keys ["CONTAINER_TAG","SYSLOG_IDENTIFIER"]
-</filter>
+#<filter docker.source>
+#   @type       record_transformer
+#   enable_ruby true
+#   remove_keys ["CONTAINER_TAG","SYSLOG_IDENTIFIER"]
+#</filter>
 
 #Check if this can be removed/overcomed
 #<filter docker.source>
