Disable all filters and plugins

--- a/conf/fluent.conf
+++ b/conf/fluent.conf
@@ -1,6 +1,6 @@
 @include healthcheck.conf
 @include systemd.conf
-@include docker.conf
+#@include docker.conf
 
 # Only process monitoring_events of content_type 'Annotations'
 #<match docker.annotations.**>
