Enable only initial record transformer

--- a/conf/docker.conf
+++ b/conf/docker.conf
@@ -66,18 +66,18 @@
 #</match>
 
 #Attempt to parse the MESSAGE field as JSON
-<filter docker.source>
-   @type parser
-   key_name MESSAGE
-
-   reserve_data true
-   emit_invalid_record_to_error false
-    
-   <parse>
+#<filter docker.source>
+#   @type parser
+#   key_name MESSAGE
+#
+#   reserve_data true
+#   emit_invalid_record_to_error false
+#    
+#   <parse>
       # Parse the MESSAGE field as json, and merge the new fields into the log message
-      @type json
-   </parse>
-</filter>
+#      @type json
+#   </parse>
+#</filter>
 
 #Parse Varnish logs
 #<filter docker.source>
