--- a/conf/docker.conf
+++ b/conf/docker.conf
@@ -60,9 +60,8 @@
      key     SERVICE_NAME
      pattern (.+)
      tag     docker.service_name.$1
-
    </rule>
-
+   
 </match>
 
 #Attempt to parse the MESSAGE field as JSON
@@ -74,43 +73,43 @@
    emit_invalid_record_to_error false
     
    <parse>
-      # Parse the MESSAGE field as json, and merge the new fields into the log message
+# Parse the MESSAGE field as json, and merge the new fields into the log message
       @type json
    </parse>
 </filter>
 
 #Parse Varnish logs
-# <filter docker.source>
-#    @type parser
-#    key_name MESSAGE
+<filter docker.source>
+    @type parser
+    key_name MESSAGE
 
-#    reserve_data true
-#    emit_invalid_record_to_error false
-#    <parse>
-#          @type regexp
-#          expression /^[\d\.\,\s]+\s+(?<authuser>\S+)\s+[\w:\/]+\s+(?<uri>\S+)\s+(?<status>[0-9]{3}|[-]{1})\s+(?<resptime>[0-9\.]+)\s+\"(?<useragent>[\S\s]+)\"\stransaction_id=(?<transaction_id>[\S]+)+\s+(?<other>\w+)/
-#    </parse>
-# </filter>
+    reserve_data true
+    emit_invalid_record_to_error false
+    <parse>
+          @type regexp
+          expression /^[\d\.\,\s]+\s+(?<authuser>\S+)\s+[\w:\/]+\s+(?<uri>\S+)\s+(?<status>[0-9]{3}|[-]{1})\s+(?<resptime>[0-9\.]+)\s+\"(?<useragent>[\S\s]+)\"\stransaction_id=(?<transaction_id>[\S]+)+\s+(?<other>\w+)/
+    </parse>
+ </filter>
 
-# <filter docker.source>
-#    @type       record_transformer
-#    enable_ruby true
-#    remove_keys ["CONTAINER_TAG","SYSLOG_IDENTIFIER"]
-# </filter>
+ <filter docker.source>
+    @type       record_transformer
+    enable_ruby true
+    remove_keys ["CONTAINER_TAG","SYSLOG_IDENTIFIER"]
+ </filter>
 
 #Check if this can be removed/overcomed
-# <filter docker.source>
-#    @type       record_transformer
-#    enable_ruby true
-#    <record>
-#       event            ${record}
-#       time             ${record["_SOURCE_REALTIME_TIMESTAMP"]}
-#    </record>
-# </filter>
+ <filter docker.source>
+    @type       record_transformer
+    enable_ruby true
+    <record>
+       event            ${record}
+       time             ${record["_SOURCE_REALTIME_TIMESTAMP"]}
+    </record>
+ </filter>
 
-#<filter docker.source>
-#   @type       record_transformer
-#   enable_ruby true
-#   renew_record true
-#   keep_keys event, time
-#</filter>
+<filter docker.source>
+   @type       record_transformer
+   enable_ruby true
+   renew_record true
+   keep_keys event, time
+</filter>
