Update filters to match docker.service names

--- a/conf/docker.conf
+++ b/conf/docker.conf
@@ -61,11 +61,11 @@
      pattern (.+)
      tag     docker.service_name.$1
    </rule>
-   
+
 </match>
 
 #Attempt to parse the MESSAGE field as JSON
-<filter docker.source>
+<filter docker.service_name.*>
    @type parser
    key_name MESSAGE
 
@@ -73,13 +73,13 @@
    emit_invalid_record_to_error false
     
    <parse>
-# Parse the MESSAGE field as json, and merge the new fields into the log message
+      # Parse the MESSAGE field as json, and merge the new fields into the log message
       @type json
    </parse>
 </filter>
 
 #Parse Varnish logs
-<filter docker.source>
+<filter docker.service_name.*>
     @type parser
     key_name MESSAGE
 
@@ -89,25 +89,25 @@
           @type regexp
           expression /^[\d\.\,\s]+\s+(?<authuser>\S+)\s+[\w:\/]+\s+(?<uri>\S+)\s+(?<status>[0-9]{3}|[-]{1})\s+(?<resptime>[0-9\.]+)\s+\"(?<useragent>[\S\s]+)\"\stransaction_id=(?<transaction_id>[\S]+)+\s+(?<other>\w+)/
     </parse>
- </filter>
+</filter>
 
- <filter docker.source>
+<filter docker.service_name.*>
     @type       record_transformer
     enable_ruby true
     remove_keys ["CONTAINER_TAG","SYSLOG_IDENTIFIER"]
- </filter>
+</filter>
 
 #Check if this can be removed/overcomed
- <filter docker.source>
+<filter docker.service_name.*>
     @type       record_transformer
     enable_ruby true
     <record>
        event            ${record}
        time             ${record["_SOURCE_REALTIME_TIMESTAMP"]}
     </record>
- </filter>
+</filter>
 
-<filter docker.source>
+<filter docker.service_name.*>
    @type       record_transformer
    enable_ruby true
    renew_record true
