Disable part of the filters in order to improve performance

--- a/conf/docker.conf
+++ b/conf/docker.conf
@@ -78,38 +78,38 @@
    </parse>
 </filter>
 
-#Parse Varnish logs
-<filter docker.service_name.*>
-    @type parser
-    key_name MESSAGE
+# #Parse Varnish logs
+# <filter docker.service_name.*>
+#     @type parser
+#     key_name MESSAGE
 
-    reserve_data true
-    emit_invalid_record_to_error false
-    <parse>
-          @type regexp
-          expression /^[\d\.\,\s]+\s+(?<authuser>\S+)\s+[\w:\/]+\s+(?<uri>\S+)\s+(?<status>[0-9]{3}|[-]{1})\s+(?<resptime>[0-9\.]+)\s+\"(?<useragent>[\S\s]+)\"\stransaction_id=(?<transaction_id>[\S]+)+\s+(?<other>\w+)/
-    </parse>
-</filter>
+#     reserve_data true
+#     emit_invalid_record_to_error false
+#     <parse>
+#           @type regexp
+#           expression /^[\d\.\,\s]+\s+(?<authuser>\S+)\s+[\w:\/]+\s+(?<uri>\S+)\s+(?<status>[0-9]{3}|[-]{1})\s+(?<resptime>[0-9\.]+)\s+\"(?<useragent>[\S\s]+)\"\stransaction_id=(?<transaction_id>[\S]+)+\s+(?<other>\w+)/
+#     </parse>
+# </filter>
 
-<filter docker.service_name.*>
-    @type       record_transformer
-    enable_ruby true
-    remove_keys ["CONTAINER_TAG","SYSLOG_IDENTIFIER"]
-</filter>
+# <filter docker.service_name.*>
+#     @type       record_transformer
+#     enable_ruby true
+#     remove_keys ["CONTAINER_TAG","SYSLOG_IDENTIFIER"]
+# </filter>
 
-#Check if this can be removed/overcomed
-<filter docker.service_name.*>
-    @type       record_transformer
-    enable_ruby true
-    <record>
-       event            ${record}
-       time             ${record["_SOURCE_REALTIME_TIMESTAMP"]}
-    </record>
-</filter>
+# #Check if this can be removed/overcomed
+# <filter docker.service_name.*>
+#     @type       record_transformer
+#     enable_ruby true
+#     <record>
+#        event            ${record}
+#        time             ${record["_SOURCE_REALTIME_TIMESTAMP"]}
+#     </record>
+# </filter>
 
-<filter docker.service_name.*>
-   @type       record_transformer
-   enable_ruby true
-   renew_record true
-   keep_keys event, time
-</filter>
+# <filter docker.service_name.*>
+#    @type       record_transformer
+#    enable_ruby true
+#    renew_record true
+#    keep_keys event, time
+# </filter>
