--- a/conf/docker.conf
+++ b/conf/docker.conf
@@ -65,18 +65,18 @@
 </match>
 
 #Attempt to parse the MESSAGE field as JSON
-<filter docker.service_name.*>
-   @type parser
-   key_name MESSAGE
+# <filter docker.service_name.*>
+#    @type parser
+#    key_name MESSAGE
 
-   reserve_data true
-   emit_invalid_record_to_error false
+#    reserve_data true
+#    emit_invalid_record_to_error false
     
-   <parse>
-      # Parse the MESSAGE field as json, and merge the new fields into the log message
-      @type json
-   </parse>
-</filter>
+#    <parse>
+#       # Parse the MESSAGE field as json, and merge the new fields into the log message
+#       @type json
+#    </parse>
+# </filter>
 
 # #Parse Varnish logs
 # <filter docker.service_name.*>
@@ -97,19 +97,19 @@
 #     remove_keys ["CONTAINER_TAG","SYSLOG_IDENTIFIER"]
 # </filter>
 
-# #Check if this can be removed/overcomed
-# <filter docker.service_name.*>
-#     @type       record_transformer
-#     enable_ruby true
-#     <record>
-#        event            ${record}
-#        time             ${record["_SOURCE_REALTIME_TIMESTAMP"]}
-#     </record>
-# </filter>
+#Check if this can be removed/overcomed
+<filter docker.service_name.*>
+    @type       record_transformer
+    enable_ruby true
+    <record>
+       event            ${record}
+       time             ${record["_SOURCE_REALTIME_TIMESTAMP"]}
+    </record>
+</filter>
 
-# <filter docker.service_name.*>
-#    @type       record_transformer
-#    enable_ruby true
-#    renew_record true
-#    keep_keys event, time
-# </filter>
+<filter docker.service_name.*>
+   @type       record_transformer
+   enable_ruby true
+   renew_record true
+   keep_keys event, time
+</filter>
