Disable parsers Enable output plugins

--- a/conf/docker.conf
+++ b/conf/docker.conf
@@ -91,11 +91,11 @@
 #     </parse>
 # </filter>
 
-# <filter docker.service_name.*>
-#     @type       record_transformer
-#     enable_ruby true
-#     remove_keys ["CONTAINER_TAG","SYSLOG_IDENTIFIER"]
-# </filter>
+<filter docker.service_name.*>
+     @type       record_transformer
+     enable_ruby true
+     remove_keys ["CONTAINER_TAG","SYSLOG_IDENTIFIER"]
+</filter>
 
 #Check if this can be removed/overcomed
 <filter docker.service_name.*>
