--- a/conf/fluent.conf
+++ b/conf/fluent.conf
@@ -14,7 +14,6 @@
    stream_name "#{ENV['KINESIS_STREAM']}"
    aws_key_id "#{ENV['S3_ACCESS_KEY']}"
    aws_sec_key "#{ENV['S3_SECRET_ACCESS_KEY']}"
-    Recommended throughput settings
    <buffer>
      flush_mode interval
      flush_interval 2s
@@ -40,7 +39,7 @@
     emit_invalid_record_to_error false
     
     <parse>
-      Parse the MESSAGE field as json, and merge the new fields into the log message
+      #Parse the MESSAGE field as json, and merge the new fields into the log message
      @type json
     </parse>
  </filter>
