--- a/conf/docker.conf
+++ b/conf/docker.conf
@@ -65,31 +65,31 @@
 </match>
 
 #Attempt to parse the MESSAGE field as JSON
-# <filter docker.service_name.*>
-#    @type parser
-#    key_name MESSAGE
+<filter docker.service_name.*>
+   @type parser
+   key_name MESSAGE
 
-#    reserve_data true
-#    emit_invalid_record_to_error false
+   reserve_data true
+   emit_invalid_record_to_error false
     
-#    <parse>
-#       # Parse the MESSAGE field as json, and merge the new fields into the log message
-#       @type json
-#    </parse>
-# </filter>
+   <parse>
+      # Parse the MESSAGE field as json, and merge the new fields into the log message
+      @type json
+   </parse>
+</filter>
 
 # #Parse Varnish logs
-# <filter docker.service_name.*>
-#     @type parser
-#     key_name MESSAGE
+<filter docker.service_name.*>
+    @type parser
+    key_name MESSAGE
 
-#     reserve_data true
-#     emit_invalid_record_to_error false
-#     <parse>
-#           @type regexp
-#           expression /^[\d\.\,\s]+\s+(?<authuser>\S+)\s+[\w:\/]+\s+(?<uri>\S+)\s+(?<status>[0-9]{3}|[-]{1})\s+(?<resptime>[0-9\.]+)\s+\"(?<useragent>[\S\s]+)\"\stransaction_id=(?<transaction_id>[\S]+)+\s+(?<other>\w+)/
-#     </parse>
-# </filter>
+    reserve_data true
+    emit_invalid_record_to_error false
+    <parse>
+          @type regexp
+          expression /^[\d\.\,\s]+\s+(?<authuser>\S+)\s+[\w:\/]+\s+(?<uri>\S+)\s+(?<status>[0-9]{3}|[-]{1})\s+(?<resptime>[0-9\.]+)\s+\"(?<useragent>[\S\s]+)\"\stransaction_id=(?<transaction_id>[\S]+)+\s+(?<other>\w+)/
+    </parse>
+</filter>
 
 <filter docker.service_name.*>
      @type       record_transformer
