--- a/conf/fluent.conf
+++ b/conf/fluent.conf
@@ -81,11 +81,11 @@
    store_as text
   
    <buffer>
-    @type memory
-     #path /var/log/fluentd-buffers/s3-annotations.buffer
-     #timekey 3600 # 1 hour partition
-     #timekey_wait 5m
-     #timekey_use_utc true # use utc
+    @type file_single
+     path /var/log/fluentd-buffers/s3-annotations.buffer
+     timekey 3600 # 1 hour partition
+     timekey_wait 5m
+     timekey_use_utc true # use utc
     flush_mode interval
     flush_interval 2s
     chunk_limit_size 16m 
@@ -118,14 +118,14 @@
    store_as text
 
    <buffer>
-     @type memory
-     #path /var/log/fluentd-buffers/s3.buffer
-     #timekey 3600 # 1 hour partition
-     #timekey_wait 5m
-     #timekey_use_utc true # use utc
+     @type file_single
+     path /var/log/fluentd-buffers/s3.buffer
+     timekey 3600 # 1 hour partition
+     timekey_wait 5m
+     timekey_use_utc true # use utc
      flush_mode interval
-     flush_interval 2s
-     chunk_limit_size 16m 
+     flush_interval 10s
+     chunk_limit_size 256m 
      flush_thread_count 8
    </buffer>
 
