enable log level debug

--- a/conf/fluent.conf
+++ b/conf/fluent.conf
@@ -71,7 +71,7 @@
   <match docker.annotations.**>
   
    @type s3
-   @log_level info
+   @log_level debug
    aws_key_id "#{ENV['S3_ACCESS_KEY']}"
    aws_sec_key "#{ENV['S3_SECRET_ACCESS_KEY']}"
    s3_bucket "#{ENV['BUCKET_NAME']}"
@@ -108,7 +108,7 @@
 <match docker.**>
   #@type null
   @type s3
-  @log_level info
+  @log_level debug
    aws_key_id "#{ENV['S3_ACCESS_KEY']}"
    aws_sec_key "#{ENV['S3_SECRET_ACCESS_KEY']}"
    s3_bucket "#{ENV['BUCKET_NAME']}"
