--- a/conf/systemd.conf
+++ b/conf/systemd.conf
@@ -1,6 +1,7 @@
 # Read logs from journald from the docker systemd unit.
 <source>
   @type systemd
+  @log_level debug
   tag docker.source
   matches [{ "_SYSTEMD_UNIT": "docker.service" }]
   path /var/log/journal
