add FLUENT_LOG label

--- a/conf/fluent.conf
+++ b/conf/fluent.conf
@@ -139,6 +139,12 @@
    </instance_profile_credentials>
 </match>
 
+<label @FLUENT_LOG>
+  <match fluent.*>
+    @type stdout
+  </match>
+</label>
+
 <match blacklisted.*>
   @type null
 </match>
