--- a/conf/docker.conf
+++ b/conf/docker.conf
@@ -94,7 +94,7 @@
 <filter docker.service_name.*>
      @type       record_modifier
      #enable_ruby true
-     remove_keys "CONTAINER_TAG","SYSLOG_IDENTIFIER"
+     remove_keys ["CONTAINER_TAG","SYSLOG_IDENTIFIER"]
 </filter>
 
 #Check if this can be removed/overcomed
