Optimize chunk size, flush interval, log levels

--- a/conf/fluent.conf
+++ b/conf/fluent.conf
@@ -16,7 +16,7 @@
    aws_sec_key "#{ENV['S3_SECRET_ACCESS_KEY']}"
    <buffer>
      flush_mode interval
-     flush_interval 2s
+     flush_interval 32s
    </buffer>
    <instance_profile_credentials>
      ip_address 169.254.169.254
@@ -71,7 +71,7 @@
   <match docker.annotations.**>
   
    @type s3
-   @log_level debug
+   @log_level info
    aws_key_id "#{ENV['S3_ACCESS_KEY']}"
    aws_sec_key "#{ENV['S3_SECRET_ACCESS_KEY']}"
    s3_bucket "#{ENV['BUCKET_NAME']}"
@@ -87,8 +87,8 @@
      timekey_wait 5m
      timekey_use_utc true # use utc
     flush_mode interval
-    flush_interval 2s
-    chunk_limit_size 16m 
+    flush_interval 180s
+    chunk_limit_size 1512m  
     flush_thread_count 8
    </buffer>
 
@@ -108,7 +108,7 @@
 <match docker.**>
   #@type null
   @type s3
-  @log_level debug
+  @log_level info
    aws_key_id "#{ENV['S3_ACCESS_KEY']}"
    aws_sec_key "#{ENV['S3_SECRET_ACCESS_KEY']}"
    s3_bucket "#{ENV['BUCKET_NAME']}"
@@ -124,8 +124,8 @@
      timekey_wait 5m
      timekey_use_utc true # use utc
      flush_mode interval
-     flush_interval 120s
-     chunk_limit_size 1024m 
+     flush_interval 180s
+     chunk_limit_size 1512m 
      flush_thread_count 8
    </buffer>
 
@@ -139,11 +139,11 @@
    </instance_profile_credentials>
 </match>
 
-<label @FLUENT_LOG>
-  <match fluent.*>
-    @type stdout
-  </match>
-</label>
+#<label @FLUENT_LOG>
+#  <match fluent.*>
+#    @type stdout
+#  </match>
+#</label>
 
 <match blacklisted.*>
   @type null
