Test performance settings

--- a/conf/fluent.conf
+++ b/conf/fluent.conf
@@ -87,9 +87,9 @@
      timekey_wait 5m
      timekey_use_utc true # use utc
     flush_mode interval
-    flush_interval 180s
-    chunk_limit_size 1512m  
-    flush_thread_count 8
+    flush_interval 120s
+    chunk_limit_size 1024m  
+    flush_thread_count 2
    </buffer>
 
    <format>
@@ -105,7 +105,7 @@
 </label>
 
 #Match all remaining logs, and output them to the fluentd /dev/null equivalent for now
-<match docker.**>
+<match docker.source>
   #@type null
   @type s3
   @log_level info
@@ -124,9 +124,9 @@
      timekey_wait 5m
      timekey_use_utc true # use utc
      flush_mode interval
-     flush_interval 180s
-     chunk_limit_size 1512m 
-     flush_thread_count 8
+     flush_interval 120s
+     chunk_limit_size 1024m 
+     flush_thread_count 2
    </buffer>
 
    <format>
