Change docker service tagging

--- a/conf/docker.conf
+++ b/conf/docker.conf
@@ -56,11 +56,11 @@
    </rule>
 
    # Re-route logs to tags that include their service name (for per-service processing)
-   #<rule>
-   #  key     SERVICE_NAME
-   #  pattern (.+)
-   #  tag     docker.service_name.$1
-   #</rule>
+   <rule>
+     key     SERVICE_NAME
+     pattern (.+)
+     tag     docker.services
+   </rule>
 
 </match>
 
@@ -98,7 +98,7 @@
 # </filter>
 
 #Check if this can be removed/overcomed
-<filter docker.source> #docker.service_name.*>
+<filter docker.services> #docker.service_name.*>
     @type       record_transformer
     enable_ruby true
     <record>
@@ -107,7 +107,7 @@
     </record>
 </filter>
 
-<filter docker.source> #docker.service_name.*>
+<filter docker.services> #docker.service_name.*>
    @type       record_transformer
    enable_ruby true
    renew_record true
