--- a/conf/fluent.conf
+++ b/conf/fluent.conf
@@ -105,7 +105,7 @@
 </label>
 
 #Match all remaining logs, and output them to the fluentd /dev/null equivalent for now
-<match docker.source>
+<match docker.services>
   #@type null
   @type s3
   @log_level info
