Update performance settings

--- a/conf/docker.conf
+++ b/conf/docker.conf
@@ -91,14 +91,15 @@
 #     </parse>
 # </filter>
 
-# <filter docker.service_name.*>
-#      @type       record_transformer
-#      enable_ruby true
-#      remove_keys ["CONTAINER_TAG","SYSLOG_IDENTIFIER"]
-# </filter>
+<filter docker.service_name.*>
+      @type       record_transformer
+      enable_ruby true
+      remove_keys ["CONTAINER_TAG","SYSLOG_IDENTIFIER"]
+</filter>
 
 #Check if this can be removed/overcomed
-<filter docker.services> #docker.service_name.*>
+
+<filter docker.services> 
     @type       record_transformer
     enable_ruby true
     <record>
@@ -107,7 +108,7 @@
     </record>
 </filter>
 
-<filter docker.services> #docker.service_name.*>
+<filter docker.services> 
    @type       record_transformer
    enable_ruby true
    renew_record true
