Adjust flush interval, thread count, chunk limit size

--- a/conf/docker.conf
+++ b/conf/docker.conf
@@ -91,7 +91,7 @@
 #     </parse>
 # </filter>
 
-<filter docker.service_name.*>
+<filter docker.services>
       @type       record_transformer
       enable_ruby true
       remove_keys ["CONTAINER_TAG","SYSLOG_IDENTIFIER"]
