various performance improvements

--- a/conf/docker.conf
+++ b/conf/docker.conf
@@ -17,14 +17,6 @@
 
 # Kinesis analytics streams don't appear to support json fields with '@' - we will continue to send @time however
 
-#<filter docker.source>
-#   @type       record_transformer
-#   enable_ruby true
-#   <record>
-#      event_time ${ record["@time"] != nil ? record["@time"] : "" }
-#   </record>
-#</filter>
-
 <match docker.source>
    @type rewrite_tag_filter
    emit_mode batch
@@ -63,6 +55,14 @@
    </rule>
 
 </match>
+
+<filter docker.annotations>
+   @type       record_transformer
+   enable_ruby true
+   <record>
+      event_time ${ record["@time"] != nil ? record["@time"] : "" }
+   </record>
+</filter>
 
 #Attempt to parse the MESSAGE field as JSON
 # <filter docker.service_name.*>
@@ -108,9 +108,9 @@
     </record>
 </filter>
 
-<filter docker.services> 
-   @type       record_transformer
-   enable_ruby true
-   renew_record true
-   keep_keys event, time
-</filter>
+#<filter docker.services> 
+#   @type       record_transformer
+#   enable_ruby true
+#   renew_record true
+#   keep_keys event, time
+#</filter>
