--- a/conf/docker.conf
+++ b/conf/docker.conf
@@ -108,9 +108,9 @@
     </record>
 </filter>
 
-#<filter docker.services> 
-#   @type       record_transformer
-#   enable_ruby true
+<filter docker.services> 
+   @type       record_transformer
+   enable_ruby true
 #   renew_record true
-#   keep_keys event, time
-#</filter>
+   keep_keys event, time
+</filter>
