--- a/conf/docker.conf
+++ b/conf/docker.conf
@@ -4,26 +4,50 @@
    enable_ruby true
    remove_keys ["_SYSTEMD_UNIT","_HOSTNAME","CONTAINER_NAME","_GID","_CAP_EFFECTIVE","SYSLOG_FACILITY","PRIORITY","_BOOT_ID","_CMDLINE","_COMM","_EXE","_SYSTEMD_CGROUP","_SYSTEMD_SLICE","_TRANSPORT","_UID","__CURSOR","__MONOTONIC_TIMESTAMP","_SELINUX_CONTEXT","__REALTIME_TIMESTAMP","_PID","CONTAINER_ID","CONTAINER_ID_FULL","_MACHINE_ID","_SYSTEMD_INVOCATION_ID"]
    <record>
-      SERVICE_NAME      ${ record["CONTAINER_NAME"] != nil && record["CONTAINER_NAME"].split("_").length >= 2 ? record["CONTAINER_NAME"].split("_")[1].split(".")[0] : "" }
+      service_name      ${ record["CONTAINER_NAME"] != nil && record["CONTAINER_NAME"].split("_").length >= 2 ? record["CONTAINER_NAME"].split("_")[1].split(".")[0] : "" }
       transaction_id    ${ /\btransaction_id=(?<transaction_id>[A-Za-z0-9\-_:]+)/ =~ record["MESSAGE"] && transaction_id != nil ? transaction_id : "" }
       platform          upp-k8s
-      SYSTEMD_UNIT      ${record["_SYSTEMD_UNIT"]}
-      HOSTNAME          ${record["_HOSTNAME"]}
-      MESSAGE           ${ record["MESSAGE"] != nil ? record["MESSAGE"].gsub(/(?i)api_?key(?-i)=[^\s&]+/, 'apiKey=********') : record["MESSAGE"] } # obfuscate API Keys (if there are any)
+      systemd_unit      ${record["_SYSTEMD_UNIT"]}
+      hostname          ${record["_HOSTNAME"]}
+      message           ${ record["MESSAGE"] != nil ? record["MESSAGE"].gsub(/(?i)api_?key(?-i)=[^\s&]+/, 'apiKey=********') : record["MESSAGE"] } # obfuscate API Keys (if there are any)
       environment       "#{ENV['ENVIRONMENT_NAME']}"
-      POD_NAME          ${ record["CONTAINER_NAME"] != nil && record["CONTAINER_NAME"].split("_").length >= 2 ? record["CONTAINER_NAME"].split("_")[2].split(".")[0] : "" }
+      pod_name          ${ record["CONTAINER_NAME"] != nil && record["CONTAINER_NAME"].split("_").length >= 2 ? record["CONTAINER_NAME"].split("_")[2].split(".")[0] : "" }
    </record>
+</filter>
+
+# Attempt to parse the MESSAGE field using the various expected formats
+<filter docker.service_name.* >
+   @type parser
+   format multi_format
+   key_name MESSAGE
+
+    reserve_data true
+   suppress_parse_error_log false
+
+    <pattern>
+      # Parse the MESSAGE field as json, and merge the new fields into the log message
+      format json
+   </pattern>
+   <pattern>
+      # Varnish response access logs
+      format /^[\d\.\,\s]+\s+(?<authuser>\S+)\s+[\w:\/]+\s+(?<uri>\S+)\s+(?<status>[0-9]{3})\s+(?<resptime>[0-9\.]+)\s+\"(?<useragent>[\S\s]+)\"\stransaction_id=(?<transaction_id>[\S]+)/
+   </pattern>
+   <pattern>
+      # No matches, passthrough
+      format none
+      message_key MESSAGE
+   </pattern>
 </filter>
 
 # Kinesis analytics streams don't appear to support json fields with '@' - we will continue to send @time however
 
-#<filter docker.source>
-#   @type       record_transformer
-#   enable_ruby true
-#   <record>
-#      event_time ${ record["@time"] != nil ? record["@time"] : "" }
-#   </record>
-#</filter>
+<filter docker.source>
+   @type       record_transformer
+   enable_ruby true
+   <record>
+      event_time ${ record["@time"] != nil ? record["@time"] : "" }
+   </record>
+</filter>
 
 <match docker.source>
    @type rewrite_tag_filter
