Test fluentd settings

--- a/conf/fluent.conf
+++ b/conf/fluent.conf
@@ -34,8 +34,8 @@
 <label @annotations>
  <filter docker.annotations.**>
     @type parser
-    key_name MESSAGE
-    reserve_data true
+    key_name message
+    reserve_data false
     emit_invalid_record_to_error false
     
     <parse>
