--- a/conf/docker.conf
+++ b/conf/docker.conf
@@ -94,23 +94,27 @@
 <filter docker.services>
       @type       record_transformer
       enable_ruby true
-      remove_keys ["CONTAINER_TAG","SYSLOG_IDENTIFIER"]
+      remove_keys ["CONTAINER_TAG","SYSLOG_IDENTIFIER","_SOURCE_REALTIME_TIMESTAMP","SERVICE_NAME","transaction_id","platform","SYSTEMD_UNIT","HOSTNAME","MESSAGE","environment","POD_NAME"]
+      <record>
+       event            ${record}
+       time             ${record["_SOURCE_REALTIME_TIMESTAMP"]}
+      </record>
 </filter>
 
 #Check if this can be removed/overcomed
 
-<filter docker.services> 
-    @type       record_transformer
-    enable_ruby true
-    <record>
-       event            ${record}
-       time             ${record["_SOURCE_REALTIME_TIMESTAMP"]}
-    </record>
-</filter>
+#<filter docker.services> 
+#     @type       record_transformer
+#     enable_ruby true
+#     <record>
+#        event            ${record}
+#        time             ${record["_SOURCE_REALTIME_TIMESTAMP"]}
+#     </record>
+# </filter>
 
-<filter docker.services> 
-   @type       record_transformer
-   enable_ruby true
-#   renew_record true
-   keep_keys event, time
-</filter>
+# <filter docker.services> 
+#    @type       record_transformer
+#    enable_ruby true
+# #   renew_record true
+#    keep_keys event, time
+# </filter>
