Fix annotations filters and improve various settings

--- a/conf/docker.conf
+++ b/conf/docker.conf
@@ -12,6 +12,7 @@
       MESSAGE           ${ record["MESSAGE"] != nil ? record["MESSAGE"].gsub(/(?i)api_?key(?-i)=[^\s&]+/, 'apiKey=********') : record["MESSAGE"] } # obfuscate API Keys (if there are any)
       environment       "#{ENV['ENVIRONMENT_NAME']}"
       POD_NAME          ${ record["CONTAINER_NAME"] != nil && record["CONTAINER_NAME"].split("_").length >= 2 ? record["CONTAINER_NAME"].split("_")[2].split(".")[0] : "" }
+      event_time        ${ record["@time"] != nil ? record["@time"] : "" }
    </record>
 </filter>
 
@@ -55,14 +56,13 @@
    </rule>
 
 </match>
-
-<filter docker.annotations>
-   @type       record_transformer
-   enable_ruby true
-   <record>
-      event_time ${ record["@time"] != nil ? record["@time"] : "" }
-   </record>
-</filter>
+# <filter docker.annotations>
+#    @type       record_transformer
+#    enable_ruby true
+#    <record>
+      
+#    </record>
+# </filter>
 
 #Attempt to parse the MESSAGE field as JSON
 # <filter docker.service_name.*>
