fix record_transformer syntax

--- a/conf/docker.conf
+++ b/conf/docker.conf
@@ -15,9 +15,7 @@
       event_time        ${ record["@time"] != nil ? record["@time"] : "" }
    </record>
 </filter>
-
-# Kinesis analytics streams don't appear to support json fields with '@' - we will continue to send @time however
-
+# Retagging
 <match docker.source>
    @type rewrite_tag_filter
    emit_mode batch
