Add json parser for annotation logs

--- a/conf/docker.conf
+++ b/conf/docker.conf
@@ -12,7 +12,7 @@
       MESSAGE           ${ record["MESSAGE"] != nil ? record["MESSAGE"].gsub(/(?i)api_?key(?-i)=[^\s&]+/, 'apiKey=********') : record["MESSAGE"] } # obfuscate API Keys (if there are any)
       environment       "#{ENV['ENVIRONMENT_NAME']}"
       POD_NAME          ${ record["CONTAINER_NAME"] != nil && record["CONTAINER_NAME"].split("_").length >= 2 ? record["CONTAINER_NAME"].split("_")[2].split(".")[0] : "" }
-      event_time        ${ record["@time"] != nil ? record["@time"] : "" }
+      
    </record>
 </filter>
 # Retagging
@@ -54,28 +54,27 @@
    </rule>
 
 </match>
-# <filter docker.annotations>
-#    @type       record_transformer
-#    enable_ruby true
-#    <record>
-      
-#    </record>
-# </filter>
 
-#Attempt to parse the MESSAGE field as JSON
-# <filter docker.service_name.*>
-#    @type parser
-#    key_name MESSAGE
-
-#    reserve_data true
-#    emit_invalid_record_to_error false
+#Attempt to parse the Annotations MESSAGE field as JSON
+<filter filter docker.annotations>
+    @type parser
+    key_name MESSAGE
+    reserve_data true
+    emit_invalid_record_to_error false
     
-#    <parse>
-#       # Parse the MESSAGE field as json, and merge the new fields into the log message
-#       @type json
-#    </parse>
-# </filter>
-
+    <parse>
+       # Parse the MESSAGE field as json, and merge the new fields into the log message
+       @type json
+    </parse>
+</filter>
+# Add event_time as kinesis doesn't support @time
+<filter docker.annotations>
+    @type       record_transformer
+    enable_ruby true
+    <record>
+      event_time        ${ record["@time"] != nil ? record["@time"] : "" }
+    </record>
+</filter>
 # #Parse Varnish logs
 # <filter docker.service_name.*>
 #     @type parser
@@ -92,7 +91,7 @@
 <filter docker.services>
       @type       record_transformer
       enable_ruby true
-      remove_keys ["CONTAINER_TAG","SYSLOG_IDENTIFIER","_SOURCE_REALTIME_TIMESTAMP","SERVICE_NAME","transaction_id","platform","SYSTEMD_UNIT","HOSTNAME","MESSAGE","environment","POD_NAME","event_time"]
+      remove_keys ["CONTAINER_TAG","SYSLOG_IDENTIFIER","_SOURCE_REALTIME_TIMESTAMP","SERVICE_NAME","transaction_id","platform","SYSTEMD_UNIT","HOSTNAME","MESSAGE","environment","POD_NAME"]
       <record>
        event            ${record}
        time             ${record["_SOURCE_REALTIME_TIMESTAMP"]}
